济南头条同步修改代码问题 添加host问题，首页的域名 支付回调修改头条host，下架靓号根据id下架 api调用日志url记录

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop2/mobileorder.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop2/mobileorder.cshtml
@@ -173,7 +173,8 @@
                                         PayType: paytype,
                                         Tel:@ViewBag.Tel,
                                         Price:@ViewBag.Price,
-                                        PC: flag
+                                        PC: flag,
+                                        Host:'@ViewBag.host'
                                     },
                                     cache: false,
                                     async: false,
