--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop0/express.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop0/express.cshtml
@@ -31,16 +31,15 @@
 <body>
     <div class="express">
         <div class="express-back">
-            <a href="/webapp/shop2/index"></a>
+            <a href="/webapp/shop/index"></a>
         </div>
         <h1 class="express-h1">快递查询</h1>
         <div class="express-box">
             <input placeholder="请输入购买的手机号" id="mobile" type="number" value="" class="land-input phone">
             <div class="page-btn" style="padding: 0; margin-top: 10px;">
-                <a href="#" data-url="/webapp/shop2/express?mobile=mobileval" id="search-submit" class="weui-btn" style="background: #ee5246;">立即查询</a>
+                <a href="#" data-url="/webapp/shop/express?mobile=mobileval" id="search-submit" class="weui-btn" style="background: #ee5246;">立即查询</a>
             </div>
             <div class='jieguo' style="display:@ViewBag.display"><p><strong>查询结果</strong></p><p>@ViewBag.msg</p></div>
-
             <div class="tip">
                 <p>
                     <strong>温馨提示</strong>
