--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop0/mobileinfo.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop0/mobileinfo.cshtml
@@ -12,6 +12,7 @@
     <meta name="__hash__" content="196815542f66520a987957e62de11344_e0605d62f175b9e213746eeaa58d7946" />
     <!-- Bytedance Tracking -->
     <script>
+        var baseUrl = '';
         (function (r, d, s, l) {
             var meteor = r.meteor = r.meteor || []; meteor.methods = ["track", "off", "on"]; meteor.factory = function (method) {
                 return function () {
@@ -24,13 +25,13 @@
                 js.src = "https://analytics.snssdk.com/meteor.js/v1/" + l + "/sdk"; fjs.parentNode.insertBefore(js, fjs)
             }; meteor.load(); if (meteor.invoked) { return }
             meteor.invoked = true; meteor.track("pageview")
-        })(window, document, "script", "1663392064049159");
+        })(window, document, "script", "1664007157743627");
     </script>
     <!-- End Bytedance Tracking -->
 </head>
 <body class="page">
     <div class="page-title">
-        <a href="/webapp/shop2/index"></a>
+        <a href="/webapp/shop/index"></a>
         <h1>号码详情</h1>
     </div>
     <div class="page-box">
@@ -100,7 +101,7 @@
     </div>
     <div style="height:40px;"></div>
     <div class="page-btn2">
-        <a href="/webapp/shop2/mobileorder/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host" class="weui-btn" style="background: #ee5246;">立即订购</a>
+        <a href="/webapp/shop/mobileorder/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price" class="weui-btn" style="background: #ee5246;">立即订购</a>
     </div>
     <script src="/themes/simplebootx_mobile/Public/js/jquery.min.js"></script>
     <script src="/themes/simplebootx_mobile/Public/js/jquery-weui.min.js"></script>
