新商户号配置 可以重复上传，跳过提示重复号码 添加网络搜索

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/Liang/List.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/Liang/List.cshtml
@@ -32,7 +32,7 @@
         </div>
         <div class="filter-bar clearfix">
             <div class="filter-bar-city">归属地</div>
-            @*<div class="filter-bar-company">运营商</div>*@
+            <div class="filter-bar-Operator">网络</div>
             <div class="filter-bar-featrue">类型</div>
             <div class="filter-bar-more">筛选</div>
             <div class="filter-bar-order">排序</div>
@@ -456,140 +456,140 @@
         <!--city end-->
         <!--company begin-->
         @*<div class="company hide">
-                <div class="left">
-                    <ul>
-                        <li data-companyid="0" data-companyname="" class="cur">全部</li>
-                        <li data-companyid="19" data-companyname="移动">中国移动</li>
-                        <li data-companyid="20" data-companyname="联通">中国联通</li>
-                        <li data-companyid="21" data-companyname="电信">中国电信</li>
-                        <li data-companyid="22" data-companyname="虚商">虚拟运营商</li>
-                    </ul>
-                </div>
-                <div class="right">
-                    <ul>
-                        <li data-companyid="0" data-prefixnum="">全部</li>
+            <div class="left">
+                <ul>
+                    <li data-companyid="0" data-companyname="" class="cur">全部</li>
+                    <li data-companyid="19" data-companyname="移动">中国移动</li>
+                    <li data-companyid="20" data-companyname="联通">中国联通</li>
+                    <li data-companyid="21" data-companyname="电信">中国电信</li>
+                    <li data-companyid="22" data-companyname="虚商">虚拟运营商</li>
+                </ul>
+            </div>
+            <div class="right">
+                <ul>
+                    <li data-companyid="0" data-prefixnum="">全部</li>
 
-                        <li data-companyid="20" data-prefixnum="130">130</li>
+                    <li data-companyid="20" data-prefixnum="130">130</li>
 
-                        <li data-companyid="20" data-prefixnum="131">131</li>
+                    <li data-companyid="20" data-prefixnum="131">131</li>
 
-                        <li data-companyid="20" data-prefixnum="132">132</li>
+                    <li data-companyid="20" data-prefixnum="132">132</li>
 
-                        <li data-companyid="21" data-prefixnum="133">133</li>
+                    <li data-companyid="21" data-prefixnum="133">133</li>
 
-                        <li data-companyid="19" data-prefixnum="134">134</li>
+                    <li data-companyid="19" data-prefixnum="134">134</li>
 
-                        <li data-companyid="19" data-prefixnum="135">135</li>
+                    <li data-companyid="19" data-prefixnum="135">135</li>
 
-                        <li data-companyid="19" data-prefixnum="136">136</li>
+                    <li data-companyid="19" data-prefixnum="136">136</li>
 
-                        <li data-companyid="19" data-prefixnum="137">137</li>
+                    <li data-companyid="19" data-prefixnum="137">137</li>
 
-                        <li data-companyid="19" data-prefixnum="138">138</li>
+                    <li data-companyid="19" data-prefixnum="138">138</li>
 
-                        <li data-companyid="19" data-prefixnum="139">139</li>
+                    <li data-companyid="19" data-prefixnum="139">139</li>
 
-                        <li data-companyid="20" data-prefixnum="145">145</li>
+                    <li data-companyid="20" data-prefixnum="145">145</li>
 
-                        <li data-companyid="19" data-prefixnum="147">147</li>
+                    <li data-companyid="19" data-prefixnum="147">147</li>
 
-                        <li data-companyid="19" data-prefixnum="150">150</li>
+                    <li data-companyid="19" data-prefixnum="150">150</li>
 
-                        <li data-companyid="19" data-prefixnum="151">151</li>
+                    <li data-companyid="19" data-prefixnum="151">151</li>
 
-                        <li data-companyid="19" data-prefixnum="152">152</li>
+                    <li data-companyid="19" data-prefixnum="152">152</li>
 
-                        <li data-companyid="21" data-prefixnum="153">153</li>
+                    <li data-companyid="21" data-prefixnum="153">153</li>
 
-                        <li data-companyid="20" data-prefixnum="155">155</li>
+                    <li data-companyid="20" data-prefixnum="155">155</li>
 
-                        <li data-companyid="20" data-prefixnum="156">156</li>
+                    <li data-companyid="20" data-prefixnum="156">156</li>
 
-                        <li data-companyid="19" data-prefixnum="157">157</li>
+                    <li data-companyid="19" data-prefixnum="157">157</li>
 
-                        <li data-companyid="19" data-prefixnum="158">158</li>
+                    <li data-companyid="19" data-prefixnum="158">158</li>
 
-                        <li data-companyid="19" data-prefixnum="159">159</li>
+                    <li data-companyid="19" data-prefixnum="159">159</li>
 
-                        <li data-companyid="21" data-prefixnum="162">162</li>
+                    <li data-companyid="21" data-prefixnum="162">162</li>
 
-                        <li data-companyid="19" data-prefixnum="165">165</li>
+                    <li data-companyid="19" data-prefixnum="165">165</li>
 
-                        <li data-companyid="20" data-prefixnum="166">166</li>
+                    <li data-companyid="20" data-prefixnum="166">166</li>
 
-                        <li data-companyid="20" data-prefixnum="167">167</li>
+                    <li data-companyid="20" data-prefixnum="167">167</li>
 
-                        <li data-companyid="21" data-prefixnum="1700">1700</li>
+                    <li data-companyid="21" data-prefixnum="1700">1700</li>
 
-                        <li data-companyid="21" data-prefixnum="1701">1701</li>
+                    <li data-companyid="21" data-prefixnum="1701">1701</li>
 
-                        <li data-companyid="21" data-prefixnum="1702">1702</li>
+                    <li data-companyid="21" data-prefixnum="1702">1702</li>
 
-                        <li data-companyid="19" data-prefixnum="1703">1703</li>
+                    <li data-companyid="19" data-prefixnum="1703">1703</li>
 
-                        <li data-companyid="20" data-prefixnum="1704">1704</li>
+                    <li data-companyid="20" data-prefixnum="1704">1704</li>
 
-                        <li data-companyid="19" data-prefixnum="1705">1705</li>
+                    <li data-companyid="19" data-prefixnum="1705">1705</li>
 
-                        <li data-companyid="19" data-prefixnum="1706">1706</li>
+                    <li data-companyid="19" data-prefixnum="1706">1706</li>
 
-                        <li data-companyid="20" data-prefixnum="1707">1707</li>
+                    <li data-companyid="20" data-prefixnum="1707">1707</li>
 
-                        <li data-companyid="20" data-prefixnum="1708">1708</li>
+                    <li data-companyid="20" data-prefixnum="1708">1708</li>
 
-                        <li data-companyid="20" data-prefixnum="1709">1709</li>
+                    <li data-companyid="20" data-prefixnum="1709">1709</li>
 
-                        <li data-companyid="20" data-prefixnum="171">171</li>
+                    <li data-companyid="20" data-prefixnum="171">171</li>
 
-                        <li data-companyid="19" data-prefixnum="172">172</li>
+                    <li data-companyid="19" data-prefixnum="172">172</li>
 
-                        <li data-companyid="21" data-prefixnum="173">173</li>
+                    <li data-companyid="21" data-prefixnum="173">173</li>
 
-                        <li data-companyid="20" data-prefixnum="175">175</li>
+                    <li data-companyid="20" data-prefixnum="175">175</li>
 
-                        <li data-companyid="20" data-prefixnum="176">176</li>
+                    <li data-companyid="20" data-prefixnum="176">176</li>
 
-                        <li data-companyid="21" data-prefixnum="177">177</li>
+                    <li data-companyid="21" data-prefixnum="177">177</li>
 
-                        <li data-companyid="19" data-prefixnum="178">178</li>
+                    <li data-companyid="19" data-prefixnum="178">178</li>
 
-                        <li data-companyid="21" data-prefixnum="180">180</li>
+                    <li data-companyid="21" data-prefixnum="180">180</li>
 
-                        <li data-companyid="21" data-prefixnum="181">181</li>
+                    <li data-companyid="21" data-prefixnum="181">181</li>
 
-                        <li data-companyid="19" data-prefixnum="182">182</li>
+                    <li data-companyid="19" data-prefixnum="182">182</li>
 
-                        <li data-companyid="19" data-prefixnum="183">183</li>
+                    <li data-companyid="19" data-prefixnum="183">183</li>
 
-                        <li data-companyid="19" data-prefixnum="184">184</li>
+                    <li data-companyid="19" data-prefixnum="184">184</li>
 
-                        <li data-companyid="20" data-prefixnum="185">185</li>
+                    <li data-companyid="20" data-prefixnum="185">185</li>
 
-                        <li data-companyid="20" data-prefixnum="186">186</li>
+                    <li data-companyid="20" data-prefixnum="186">186</li>
 
-                        <li data-companyid="19" data-prefixnum="187">187</li>
+                    <li data-companyid="19" data-prefixnum="187">187</li>
 
-                        <li data-companyid="19" data-prefixnum="188">188</li>
+                    <li data-companyid="19" data-prefixnum="188">188</li>
 
-                        <li data-companyid="21" data-prefixnum="189">189</li>
+                    <li data-companyid="21" data-prefixnum="189">189</li>
 
-                        <li data-companyid="21" data-prefixnum="191">191</li>
+                    <li data-companyid="21" data-prefixnum="191">191</li>
 
-                        <li data-companyid="19" data-prefixnum="198">198</li>
+                    <li data-companyid="19" data-prefixnum="198">198</li>
 
-                        <li data-companyid="21" data-prefixnum="199">199</li>
+                    <li data-companyid="21" data-prefixnum="199">199</li>
 
-                    </ul>
-                </div>
-            </div>*@
+                </ul>
+            </div>
+        </div>*@
         <!--company end-->
         <!--featrue begin-->
         <div class="featrue hide">
             <div class="left">
                 <ul>
                     <li data-pos="" class="cur">不限位置</li>
-                    <li data-pos="m">中间规律</li>
-                    <li data-pos="e">尾数规律</li>
+                    @*<li data-pos="m">中间规律</li>
+                    <li data-pos="e">尾数规律</li>*@
                 </ul>
             </div>
             <div class="right">
@@ -704,16 +704,6 @@
                 <li data-val="100000-">10万以上</li>
 
             </ul>
-            @*<div class="tit">寓意</div>
-                <ul class="clearfix yuyi">
-
-                    <li data-val="">不限</li>
-
-                    <li data-val="1">风水能量号</li>
-
-                    <li data-val="2">爱情号</li>
-
-                </ul>*@
             <div class="tit">排除</div>
             <ul class="clearfix except">
 
@@ -738,12 +728,6 @@
                 <li data-val="e9">不带9</li>
 
             </ul>
-            @*<div class="tit">排序</div>
-                <ul class="clearfix order">
-                    <li data-val="0">默认排序</li>
-                    <li data-val="1">价格从低到高</li>
-                    <li data-val="2">价格从高到低</li>
-                </ul>*@
             <div style="height:40px;"></div>
             <div class="filter-more-btn">
                 <div class="reset">重置</div>
@@ -752,6 +736,20 @@
         </div>
         <!--more end-->
 
+        <div class="filter-Operator hide">
+            <div class="left">
+                <ul>
+                    <li data-pos="" class="cur">网络</li>
+                </ul>
+            </div>
+            <div class="right">
+                <ul>
+                    <li data-fval="移动网络">移动网络</li>
+                    <li data-fval="联通网络">联通网络</li>
+                    <li data-fval="电信网络">电信网络</li>
+                </ul>
+            </div>
+        </div>
         <div class="filter-order hide">
             <div class="left">
                 <ul>
@@ -883,7 +881,7 @@
     var company = '', frontNumber = '', features = '',
         repeatNumber = '', moreNumber = '', month = '',
         except = '', price = '', city = '',
-        type = 'mb', pos = '', keyword = '', cat = '', yuyi = '';
+        type = 'mb', pos = '', keyword = '', cat = '', Operator = '';
     var islease = 0;
     var orderType = '';
     var ExistMark = '';
@@ -894,7 +892,7 @@
     keyword = request('keyword');
     orderType = request('orderType');
     price = request('price');
-    yuyi = request('yuyi');
+    Operator = request('Operator');
     except = request('except');
     features = request('features');
     ExistMark = request('ExistMark');
@@ -940,13 +938,13 @@
     if (except != '') {
         $(".filter-more .except li[data-val='" + except + "']").addClass("cur");
     }
-
-    if (yuyi != '') {
-        $(".filter-more .yuyi li[data-val='" + yuyi + "']").addClass("cur");
-    }
-
+    
     if (orderType != '') {
         $(".filter-bar-order").html(substr($(".filter-order li[data-fval='" + orderType + "']").html(), 0, 5, true));
+    }
+
+    if (Operator != '') {
+        $(".filter-bar-Operator").html($(".filter-Operator li[data-fval='" + Operator + "']"));
     }
 
     var _kw = keyword;
@@ -1142,8 +1140,6 @@
     $(".filter-more-btn .submit").click(function () {
         price = $(".filter-more .price .cur").data("val") || '';
         except = $(".filter-more .except .cur").data("val") || '';
-        orderType = $(".filter-more .order .cur").data("val") || '';
-        yuyi = $(".filter-more .yuyi .cur").data("val") || '';
         hideAllFilterItem();
         //do search
         reload();
@@ -1153,8 +1149,6 @@
         $(".filter-more li").removeClass("cur");
         price = '';
         except = '';
-        orderType = '';
-        yuyi = '';
         hideAllFilterItem();
         //do search
         reload();
@@ -1174,13 +1168,29 @@
         //do search
         reload();
     })
+
+
+    //网络
+    $(".filter-Operator .right li").click(function () {
+        $(this).siblings().removeClass("cur");
+        $(this).addClass("cur");
+        Operator = $(this).data("fval");
+        if (Operator == '') {
+            $(".filter-bar-Operator").html('网络').removeClass("nav-sel");
+        } else {
+            $(".filter-bar-Operator").html($(this).text()).removeClass("nav-sel");
+        }
+        hideAllFilterItem();
+        //do search
+        reload();
+    })
     /*action*/
 
     /*function*/
 
     function so2() {
-        //var url = '/webapp/m-list.aspx?cat=' + cat + '&company=' + company + '&frontNumber=' + frontNumber + '&features=' + features + '&repeatNumber=' + repeatNumber + '&moreNumber=' + moreNumber + '&month=' + month + '&except=' + except + '&price=' + price + '&city=' + city + '&type=' + type + '&pos=' + pos + '&keyword=' + keyword + '&page=' + curpage + '&islease=' + islease + '&o=' + orderType + '&yy=' + yuyi;
-        var url = 'List?organizeId=' + organizeId + '&city=' + city + '&keyword=' + keyword + '&page=' + curpage + '&features=' + features + '&orderType=' + orderType + '&price=' + price + '&except=' + except + '&yuyi=' + yuyi + '&ExistMark=' + ExistMark;
+        //var url = '/webapp/m-list.aspx?cat=' + cat + '&company=' + company + '&frontNumber=' + frontNumber + '&features=' + features + '&repeatNumber=' + repeatNumber + '&moreNumber=' + moreNumber + '&month=' + month + '&except=' + except + '&price=' + price + '&city=' + city + '&type=' + type + '&pos=' + pos + '&keyword=' + keyword + '&page=' + curpage + '&islease=' + islease + '&o=' + orderType + '&yy=' + Operator;
+        var url = 'List?organizeId=' + organizeId + '&city=' + city + '&keyword=' + keyword + '&page=' + curpage + '&features=' + features + '&orderType=' + orderType + '&price=' + price + '&except=' + except + '&Operator=' + Operator + '&ExistMark=' + ExistMark;
         location.href = url;
     }
 
@@ -1191,8 +1201,8 @@
         //    organizeId: organizeId,
         //    city: city
         // }
-        //var url = '/Liang/ListData?cat=' + cat + '&company=' + company + '&frontNumber=' + frontNumber + '&features=' + features + '&repeatNumber=' + repeatNumber + '&moreNumber=' + moreNumber + '&month=' + month + '&except=' + except + '&price=' + price + '&city=' + city + '&type=' + type + '&pos=' + pos + '&keyword=' + keyword + '&page=' + curpage + '&islease=' + islease + '&o=' + orderType + '&yy=' + yuyi;
-        var url = '/Liang/ListData?organizeId=' + organizeId + '&city=' + city + '&keyword=' + keyword + '&page=' + curpage + '&features=' + features + '&orderType=' + orderType + '&price=' + price + '&except=' + except + '&yuyi=' + yuyi + '&ExistMark=' + ExistMark;
+        //var url = '/Liang/ListData?cat=' + cat + '&company=' + company + '&frontNumber=' + frontNumber + '&features=' + features + '&repeatNumber=' + repeatNumber + '&moreNumber=' + moreNumber + '&month=' + month + '&except=' + except + '&price=' + price + '&city=' + city + '&type=' + type + '&pos=' + pos + '&keyword=' + keyword + '&page=' + curpage + '&islease=' + islease + '&o=' + orderType + '&yy=' + Operator;
+        var url = '/Liang/ListData?organizeId=' + organizeId + '&city=' + city + '&keyword=' + keyword + '&page=' + curpage + '&features=' + features + '&orderType=' + orderType + '&price=' + price + '&except=' + except + '&Operator=' + Operator + '&ExistMark=' + ExistMark;
         $.get(url, function (result) {
             if (result == '') {
                 if (curpage == 1) {
