--- a/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/Orders/OrdersIndex.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/Orders/OrdersIndex.cshtml
@@ -171,6 +171,19 @@
             })
         }
     }
+    //导出
+    function btn_export() {
+        dialogOpen({
+            id: "ExcelIExportDialog",
+            title: '导出订单',
+            url: '/Utility/ExcelExportForm?gridId=gridTable&filename=订单表',
+            width: "500px",
+            height: "380px",
+            callBack: function (iframeId) {
+                top.frames[iframeId].AcceptClick();
+            }, btn: ['导出Excel', '关闭']
+        });
+    }
 </script>
 <div class="titlePanel">
     <div class="title-search">
@@ -271,6 +284,7 @@
             <a id="lr-send" class="btn btn-default" onclick="btn_send()"><i class="fa fa-send"></i>发货</a>
             <a id="lr-ka" class="btn btn-default" onclick="btn_ka()"><i class="fa fa-credit-card-alt"></i>&nbsp;开卡</a>
             <a id="lr-delete" class="btn btn-default" onclick="btn_delete()"><i class="fa fa-trash-o"></i>&nbsp;删除</a>
+            <a id="lr-export" class="btn btn-default" onclick="btn_export()"><i class="fa fa-sign-out"></i>&nbsp;导出</a>
         </div>
     </div>
     @*<script>$('.toolbar').authorizeButton()</script>*@
