--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/mobileorder.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/mobileorder.cshtml
@@ -164,7 +164,7 @@
                             if (address) {
                                 $.ajax({
                                     type: "post",
-                                    url: "/webapp/shop2/ajaxorder",
+                                    url: "/webapp/shop/ajaxorder",
                                     data: {
                                         TelphoneID: id,
                                         Receiver: name,
@@ -189,7 +189,8 @@
 
                                         if (resObj.status) {
                                             //头条推广转化（点击支付）
-                                            meteor.track("shopping", { convert_id: "1664753008807948" })
+                                            //meteor.track("shopping", { convert_id: "1664753008807948" })
+                                            meteor.track("form", { convert_id: "1667100208827405" })
                                             //不做处理，跳转
                                             if (resObj.data.target) {
                                                 location.href = resObj.data.gotoUrl;
