--- a/HZSoft.Application/HZSoft.Application.Web/ContentNew/css/m.css
+++ b/HZSoft.Application/HZSoft.Application.Web/ContentNew/css/m.css
@@ -493,7 +493,7 @@ input[type=text],input[type=number],input[type=tel],textarea,input[type=button],
  .tab .content img{ max-width:90%;}
  
  .btn-fav{ position:absolute; right:10px; bottom:10px; width:60px; height:24px; line-height:24px; border:1px solid #fff; border-radius:12px; color:#fff; text-align:center; font-size:14px;}
- .fav-nav{ position:fixed; right:0; bottom:100px; z-index:99999; width:32px; height:32px; background:transparent url(../img/icon/fav3.png) no-repeat center center;}
+ .fav-nav{ position:fixed; right:0; bottom:100px; z-index:99999; width:32px; height:32px; background:transparent url(../images/fav3.png) no-repeat center center;}
   .fav-nav a{ display:inline-block; width:100%; height:100%; }
     
     
