添加响当当头条账号xdd 修改选择省县只读，不弹出输入框

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/Orders/OrdersIndex.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/Orders/OrdersIndex.cshtml
@@ -95,6 +95,52 @@
                 $('#' + this.id).setSelection(selectedRowIndex, false);
             }
         });
+        //点击时间范围（今天、近7天、近一个月、近三个月）
+        $("#time_horizon a.btn-default").click(function () {
+            $("#time_horizon a.btn-default").removeClass("active");
+            $(this).addClass("active");
+            switch ($(this).attr('data-value')) {
+                case "1"://今天
+                    $("#StartTime").val("@DateTime.Now.ToString("yyyy-MM-dd")");
+                    $("#EndTime").val("@DateTime.Now.ToString("yyyy-MM-dd")");
+                    break;
+                case "2"://近7天
+                    $("#StartTime").val("@DateTime.Now.AddDays(-7).ToString("yyyy-MM-dd")");
+                    $("#EndTime").val("@DateTime.Now.ToString("yyyy-MM-dd")");
+                    break;
+                case "3"://近一个月
+                    $("#StartTime").val("@DateTime.Now.AddMonths(-1).ToString("yyyy-MM-dd")");
+                    $("#EndTime").val("@DateTime.Now.ToString("yyyy-MM-dd")");
+                    break;
+                case "4"://近三个月
+                    $("#StartTime").val("@DateTime.Now.AddMonths(-3).ToString("yyyy-MM-dd")");
+                    $("#EndTime").val("@DateTime.Now.ToString("yyyy-MM-dd")");
+                    break;
+                default:
+                    break;
+            }
+            $("#SelectedStartTime").html($("#StartTime").val());
+            $("#SelectedEndTime").html($("#EndTime").val());
+            $('#btn_Search').trigger("click");
+        });
+        //查询事件
+        $("#btn_Search").click(function () {
+            var queryJson = $("#filter-form").GetWebControls();
+            //var queryJson = {
+            //    Telphone: $("#txt_Keyword").val(),
+            //    OrganizeId: $("#OrganizeId").val(),
+            //    Grade: $("#Grade").val()
+            //}
+            $gridTable.jqGrid('setGridParam', {
+                postData: { queryJson: JSON.stringify(queryJson) }, page: 1
+            }).trigger('reloadGrid');
+        });
+        //查询回车
+        $('#txt_Keyword').bind('keypress', function (event) {
+            if (event.keyCode == "13") {
+                $('#btn_Search').trigger("click");
+            }
+        });
     }
     //新增
     function btn_add() {
