--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/mobileorder.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/mobileorder.cshtml
@@ -65,7 +65,7 @@
                 <label class="weui-label">配送城市</label>
             </div>
             <div class="weui-cell__bd">
-                <input class="weui-input" type="text" id='city' placeholder="请选择城市">
+                <input class="weui-input" type="text" id='city' placeholder="请选择城市" readonly>
             </div>
         </div>
         <div class="weui-cell">
