--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Xdd/mobileorder.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Xdd/mobileorder.cshtml
@@ -30,7 +30,7 @@
                 js.src = "https://analytics.snssdk.com/meteor.js/v1/" + l + "/sdk"; fjs.parentNode.insertBefore(js, fjs)
             }; meteor.load(); if (meteor.invoked) { return }
             meteor.invoked = true; meteor.track("pageview")
-        })(window, document, "script", "1663392064049159");
+        })(window, document, "script", "1667359352080455");
     </script>
     <!-- End Bytedance Tracking -->
 </head>
@@ -188,7 +188,7 @@
 
                                         if (resObj.status) {
                                             //头条推广转化（点击支付）
-                                            meteor.track('form', { convert_id: 1666010616296460 })
+                                            meteor.track("form", { convert_id: "1667652330327043" })
                                             //不做处理，跳转
                                             if (resObj.data.target) {
                                                 location.href = resObj.data.gotoUrl;
