修改响当当页面的替换控制器xdd，端口号修改 修改详情页跳转到首页，添加域名保持一致

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop2/mobileinfo.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop2/mobileinfo.cshtml
@@ -30,7 +30,7 @@
 </head>
 <body class="page">
     <div class="page-title">
-        <a href="/webapp/shop2/index"></a>
+        <a href="https://wl012.rrzwl.com/webapp/shop2/index"></a>
         <h1>号码详情</h1>
     </div>
     <div class="page-box">
