--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Xdd/mobileinfo.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Xdd/mobileinfo.cshtml
@@ -30,7 +30,7 @@
 </head>
 <body class="page">
     <div class="page-title">
-        <a href="/webapp/shop2/index"></a>
+        <a href="https://hllf25.zitiaonc.com:4411/webapp/xdd/Index"></a>
         <h1>号码详情</h1>
     </div>
     <div class="page-box">
@@ -100,7 +100,7 @@
     </div>
     <div style="height:40px;"></div>
     <div class="page-btn2">
-        <a href="/webapp/shop2/mobileorder/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host" class="weui-btn" style="background: #ee5246;">立即订购</a>
+        <a href="/webapp/xdd/mobileorder/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host" class="weui-btn" style="background: #ee5246;">立即订购</a>
     </div>
     <script src="/themes/simplebootx_mobile/Public/js/jquery.min.js"></script>
     <script src="/themes/simplebootx_mobile/Public/js/jquery-weui.min.js"></script>
