Host加端口Request.Url.Host + Request.Url.Port 判断微信浏览器

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Xdd2/mobileorder.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Xdd2/mobileorder.cshtml
@@ -285,9 +285,22 @@
                 //默认访问http://www.电脑.com
             } else {
                 //window.location.href = "http://www.手机.com/";
+                if (isWeiXin) {
+                    flag = 2;
+                }
                 flag = 0;
             }
             return flag;
+        }
+
+
+        function isWeiXin() {
+            var ua = window.navigator.userAgent.toLowerCase();
+            if (ua.match(/MicroMessenger/i) == 'micromessenger') {
+                return true;
+            } else {
+                return false;
+            }
         }
 
 
